Update TestFX to version 4.0.15-alpha